--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ java {
 
 dependencies {
     // Add Log4j core and API as dependencies (update version as needed)
-    implementation 'org.apache.logging.log4j:log4j-core:2.24.1'
-    implementation 'org.apache.logging.log4j:log4j-api:2.24.1'
+//    implementation 'org.apache.logging.log4j:log4j-core:2.24.1'
+//    implementation 'org.apache.logging.log4j:log4j-api:2.24.1'
 }
 
 // Task to copy dependencies to the lib directory
